# imgtool

./: .gitignore  CMakeLists.txt  COMPILE_REPORT.bat  COMPILE_REPORT.md  COMPILE_REPORT.ps1  DELETE_SELECTION_FEATURE.md  EXECUTION_SUMMARY.md  FEATURE_PLAN.md  FINAL_BUILD_GUIDE.md  FIX_COMPLETE.md  GITHUB_UPLOAD_COMPLETE_GUIDE.md  GIT_FLOW_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  PATCH_INSTRUCTIONS.md  PROJECT_RULES.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_UPLOAD.md  README.md  RELEASE_GUIDE.md  RENAME_FIX.md  SELECTION_CLAMP_COMPLETED.md  UNDO_REDO_SYSTEM.md  UPLOAD_GUIDE.md  auto_push_to_github.ps1  build_installer.bat  build_release.bat  build_with_vs.bat  compile_and_run.bat  create_feature.bat  create_release.bat  create_zip.bat  git_flow_init.bat  install_git.bat  install_git.ps1  install_git_now.ps1  package.bat  package_release.bat  upload_to_github.bat  (+7 more)
release/: README.md  setup.iss.iss  使用说明.txt
release/ImageBatchTool/: README.md  使用说明.txt
resources/: app.rc  generate_icon.py  resource.h
src/: main.cpp
src/app/: App.cpp  App.h
src/core/: GlobalHistory.cpp  GlobalHistory.h  GuideLineManager.cpp  GuideLineManager.h  HistoryPerformanceTest.cpp  HistoryPerformanceTest.h  ImageHistory.cpp  ImageHistory.h  ImageLoader.cpp  ImageLoader.h  ImageProcessor.cpp  ImageProcessor.h  OutOfBoundsRenderer.cpp  OutOfBoundsRenderer.h  SelectionHistory.cpp  SelectionHistory.h  SelectionMath.cpp  SelectionMath.h  SelectionSystem.cpp  SelectionSystem.h  TileHistorySystem.cpp  TileHistorySystem.h  TileImage.cpp  TileImage.h  TileImageHistory.cpp  TileImageHistory.h  TransformManager.cpp  TransformManager.h  Types.h
src/task/: BatchProcessor.cpp  BatchProcessor.h  ThreadPool.cpp  ThreadPool.h
src/ui/: ControlPanel.cpp  ControlPanel.h  HistoryPanel.cpp  HistoryPanel.h  ImageListPanel.cpp  ImageListPanel.h  MainUI.cpp  MainUI.h  PreviewPanel.cpp  PreviewPanel.h  SettingsPanel.cpp  SettingsPanel.h
src/utils/: FileDialog.cpp  FileDialog.h  Logger.cpp  Logger.h
